--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -12,6 +12,7 @@
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "import requests\n",
     "import pymongo\n",
+    "from pymongo import MongoClient\n",
     "from flask import Flask, render_template"
    ]
   },
@@ -82,8 +83,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NASA Ingenuity Mars Helicopter Prepares for First Flight\n",
-      "<li class=\"slide\"><div class=\"image_and_description_container\"><a href=\"/news/8896/nasa-ingenuity-mars-helicopter-prepares-for-first-flight/\" target=\"_self\"><div class=\"rollover_description\"><div class=\"rollover_description_inner\">Now uncocooned from its protective carbon-fiber shield, the helicopter is being readied for its next steps.  </div><div class=\"overlay_arrow\"><img alt=\"More\" src=\"/assets/overlay-arrow.png\"/></div></div><div class=\"list_image\"><img alt=\"An illustration of NASA’s Ingenuity Helicopter flying on Mars. \" src=\"/system/news_items/list_view_images/8896_thumb-320.jpg\"/></div><div class=\"bottom_gradient\"><div><h3>NASA Ingenuity Mars Helicopter Prepares for First Flight</h3></div></div></a><div class=\"list_text\"><div class=\"list_date\">March 23, 2021</div><div class=\"content_title\"><a href=\"/news/8896/nasa-ingenuity-mars-helicopter-prepares-for-first-flight/\" target=\"_self\">NASA Ingenuity Mars Helicopter Prepares for First Flight</a></div><div class=\"article_teaser_body\">Now uncocooned from its protective carbon-fiber shield, the helicopter is being readied for its next steps.  </div></div></div></li>\n"
+      "NASA's Curiosity Mars Rover Takes Selfie With 'Mont Mercou'\n",
+      "<li class=\"slide\"><div class=\"image_and_description_container\"><a href=\"/news/8901/nasas-curiosity-mars-rover-takes-selfie-with-mont-mercou/\" target=\"_self\"><div class=\"rollover_description\"><div class=\"rollover_description_inner\">The rover also snapped a pair of panoramas to create a 3D view of the stark cliff face featured in the selfie.</div><div class=\"overlay_arrow\"><img alt=\"More\" src=\"/assets/overlay-arrow.png\"/></div></div><div class=\"list_image\"><img alt=\"NASA’s Curiosity Mars rover used two cameras to create this selfie in front of Mont Mercou, a rock outcrop that stands 20 feet (6 meters) tall.\" src=\"/system/news_items/list_view_images/8901_1-PIA24543-Curiosity's-Selfie-at-Mont-Mercou-main-320x240.jpg\"/></div><div class=\"bottom_gradient\"><div><h3>NASA's Curiosity Mars Rover Takes Selfie With 'Mont Mercou'</h3></div></div></a><div class=\"list_text\"><div class=\"list_date\">March 30, 2021</div><div class=\"content_title\"><a href=\"/news/8901/nasas-curiosity-mars-rover-takes-selfie-with-mont-mercou/\" target=\"_self\">NASA's Curiosity Mars Rover Takes Selfie With 'Mont Mercou'</a></div><div class=\"article_teaser_body\">The rover also snapped a pair of panoramas to create a 3D view of the stark cliff face featured in the selfie.</div></div></div></li>\n"
      ]
     }
    ],
@@ -106,8 +107,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NASA Ingenuity Mars Helicopter Prepares for First Flight\n",
-      "Now uncocooned from its protective carbon-fiber shield, the helicopter is being readied for its next steps.  \n"
+      "NASA's Curiosity Mars Rover Takes Selfie With 'Mont Mercou'\n",
+      "The rover also snapped a pair of panoramas to create a 3D view of the stark cliff face featured in the selfie.\n"
      ]
     }
    ],
@@ -126,7 +127,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - ====== WebDriver manager ======\n"
+      "[WDM] - ====== WebDriver manager ======\n",
+      "[WDM] - Current google-chrome version is 89.0.4389\n",
+      "[WDM] - Get LATEST driver version for 89.0.4389\n"
      ]
     },
     {
@@ -141,8 +144,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - Current google-chrome version is 89.0.4389\n",
-      "[WDM] - Get LATEST driver version for 89.0.4389\n",
       "[WDM] - Driver [C:\\Users\\nadzema\\.wdm\\drivers\\chromedriver\\win32\\89.0.4389.23\\chromedriver.exe] found in cache\n"
      ]
     }
@@ -150,7 +151,7 @@
    "source": [
     "# Setup splinter again for a different url\n",
     "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
-    "browser = Browser('chrome', **executable_path, headless=False)"
+    "browser = Browser('chrome', **executable_path)"
    ]
   },
   {
@@ -182,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://d2pn8kiwq2w21t.cloudfront.net/images/jpegPIA24510.2e16d0ba.fill-400x400-c50.jpg\n"
+      "https://d2pn8kiwq2w21t.cloudfront.net/images/jpegPIA24513.2e16d0ba.fill-400x400-c50.jpg\n"
      ]
     }
    ],
@@ -407,19 +408,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'Hemisphere Name': 'Cerberus Hemisphere Enhanced', 'Hemisphere Url': 'https://astrogeology.usgs.gov/search/map/Mars/Viking/cerberus_enhanced'}, {'Hemisphere Name': 'Schiaparelli Hemisphere Enhanced', 'Hemisphere Url': 'https://astrogeology.usgs.gov/search/map/Mars/Viking/schiaparelli_enhanced'}, {'Hemisphere Name': 'Syrtis Major Hemisphere Enhanced', 'Hemisphere Url': 'https://astrogeology.usgs.gov/search/map/Mars/Viking/syrtis_major_enhanced'}, {'Hemisphere Name': 'Valles Marineris Hemisphere Enhanced', 'Hemisphere Url': 'https://astrogeology.usgs.gov/search/map/Mars/Viking/valles_marineris_enhanced'}]\n"
+      "[{'Title': 'Cerberus Hemisphere Enhanced', 'Hemisphere Url': 'https://astrogeology.usgs.gov/search/map/Mars/Viking/cerberus_enhanced'}, {'Title': 'Schiaparelli Hemisphere Enhanced', 'Hemisphere Url': 'https://astrogeology.usgs.gov/search/map/Mars/Viking/schiaparelli_enhanced'}, {'Title': 'Syrtis Major Hemisphere Enhanced', 'Hemisphere Url': 'https://astrogeology.usgs.gov/search/map/Mars/Viking/syrtis_major_enhanced'}, {'Title': 'Valles Marineris Hemisphere Enhanced', 'Hemisphere Url': 'https://astrogeology.usgs.gov/search/map/Mars/Viking/valles_marineris_enhanced'}]\n"
      ]
     }
    ],
    "source": [
     "print(hemisphere_image_urls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_data_mars = {\n",
+    "'Title' : title,\n",
+    "'Mars_Paragraph': news_p,\n",
+    "'Featured_image': featured_image_url,\n",
+    "'Mars_Facts_Table': mars_facts_string,\n",
+    "'Hemisphere_image_urls': hemisphere_image_urls,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Title': 'Valles Marineris Hemisphere Enhanced', 'Mars_Paragraph': 'The rover also snapped a pair of panoramas to create a 3D view of the stark cliff face featured in the selfie.', 'Featured_image': 'https://d2pn8kiwq2w21t.cloudfront.net/images/jpegPIA24513.2e16d0ba.fill-400x400-c50.jpg', 'Mars_Facts_Table': '<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n    </tr>\\n    <tr>\\n      <th>Description</th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n  </tbody>\\n</table>', 'Hemisphere_image_urls': [{'Title': 'Cerberus Hemisphere Enhanced', 'Hemisphere Url': 'https://astrogeology.usgs.gov/search/map/Mars/Viking/cerberus_enhanced'}, {'Title': 'Schiaparelli Hemisphere Enhanced', 'Hemisphere Url': 'https://astrogeology.usgs.gov/search/map/Mars/Viking/schiaparelli_enhanced'}, {'Title': 'Syrtis Major Hemisphere Enhanced', 'Hemisphere Url': 'https://astrogeology.usgs.gov/search/map/Mars/Viking/syrtis_major_enhanced'}, {'Title': 'Valles Marineris Hemisphere Enhanced', 'Hemisphere Url': 'https://astrogeology.usgs.gov/search/map/Mars/Viking/valles_marineris_enhanced'}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (all_data_mars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Connecting to PyMongo localhost & assigning variables\n",
+    "client = pymongo.MongoClient('mongodb://localhost:27017')\n",
+    "db = client.mars_db\n",
+    "collection = db.mars \n",
+    "\n",
+    "collection.insert(all_data_mars)"
    ]
   }
  ],
